# dithering

./: .gitignore  Cargo.toml  Readme.md
src/: config.rs  dither_tools.rs  lib.rs  main.rs
src/dither_tools/: bayer_dithering.rs  binary_quantisation.rs
