[package]
name = "dithering"
version = "0.1.0"
edition = "2021"
author = "Luka Hedt <lhedt@protonmail.com>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.2"
clap = { version = "3.1.15", features = ["derive"] }
rand = "0.8.5"