[package]
name = "dithering"
version = "0.1.0"
edition = "2021"
authors = ["Luka Hedt <lhedt@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.15", features = ["derive"] }
image = "0.24.2"
morton-encoding = "2.0.1"
rand = "0.8.5"